<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/gradient_background"
    tools:context=".StatisticsMainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistics"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:fontFamily="cursive"/>

    <Button
        android:id="@+id/buttonBarChart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bar_chart"
        android:backgroundTint="@color/baby_blue"/>
    <Button
        android:id="@+id/buttonPieChart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pie_chart"
        android:backgroundTint="@color/baby_blue"/>
    <Button
        android:id="@+id/buttonMainMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_menu"
        android:backgroundTint="@color/baby_blue"/>

</LinearLayout>