<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient_background"
    android:padding="10dp"
    tools:context=".PTSDQuizActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <TextView
                android:id="@+id/heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ptsd_self_evaluation"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ptsd_instruct"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instruct_ptsd_P1_P9"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/P1"/>
            <RadioGroup
                android:id="@+id/P1answers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/P1A1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_at_all"/>
                <RadioButton
                    android:id="@+id/P1A2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a_little_bit"/>
                <RadioButton
                    android:id="@+id/P1A3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/moderately"/>
                <RadioButton
                    android:id="@+id/P1A4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quite_a_bit"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/extremely"/>
            </RadioGroup>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/P2"/>
            <RadioGroup
                android:id="@+id/P2answers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/P2A1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_at_all"/>
                <RadioButton
                    android:id="@+id/P2A2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a_little_bit"/>
                <RadioButton
                    android:id="@+id/P2A3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/moderately"/>
                <RadioButton
                    android:id="@+id/P2A4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quite_a_bit"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/extremely"/>
            </RadioGroup>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/P3"/>
            <RadioGroup
                android:id="@+id/P3answers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/P3A1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_at_all"/>
                <RadioButton
                    android:id="@+id/P3A2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a_little_bit"/>
                <RadioButton
                    android:id="@+id/P3A3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/moderately"/>
                <RadioButton
                    android:id="@+id/P3A4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quite_a_bit"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/extremely"/>
            </RadioGroup>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/P4"/>
            <RadioGroup
                android:id="@+id/P4answers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/P4A1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_at_all"/>
                <RadioButton
                    android:id="@+id/P4A2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a_little_bit"/>
                <RadioButton
                    android:id="@+id/P4A3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/moderately"/>
                <RadioButton
                    android:id="@+id/P4A4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quite_a_bit"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/extremely"/>
            </RadioGroup>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/P5"/>
            <RadioGroup
                android:id="@+id/P5answers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/P5A1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_at_all"/>
                <RadioButton
                    android:id="@+id/P5A2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a_little_bit"/>
                <RadioButton
                    android:id="@+id/P5A3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/moderately"/>
                <RadioButton
                    android:id="@+id/P5A4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quite_a_bit"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/extremely"/>
            </RadioGroup>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/P6"/>
            <RadioGroup
                android:id="@+id/P6answers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/P6A1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_at_all"/>
                <RadioButton
                    android:id="@+id/P6A2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a_little_bit"/>
                <RadioButton
                    android:id="@+id/P6A3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/moderately"/>
                <RadioButton
                    android:id="@+id/P6A4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quite_a_bit"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/extremely"/>
            </RadioGroup>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_the_past_month_have_the_above_problems"
                android:textStyle="italic|bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/P7"/>
            <RadioGroup
                android:id="@+id/P7answers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/P7A1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_at_all"/>
                <RadioButton
                    android:id="@+id/P7A2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a_little_bit"/>
                <RadioButton
                    android:id="@+id/P7A3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/moderately"/>
                <RadioButton
                    android:id="@+id/P7A4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quite_a_bit"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/extremely"/>
            </RadioGroup>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/P8"/>
            <RadioGroup
                android:id="@+id/P8answers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/P8A1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_at_all"/>
                <RadioButton
                    android:id="@+id/P8A2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a_little_bit"/>
                <RadioButton
                    android:id="@+id/P8A3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/moderately"/>
                <RadioButton
                    android:id="@+id/P8A4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quite_a_bit"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/extremely"/>
            </RadioGroup>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/P9"/>
            <RadioGroup
                android:id="@+id/P9answers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/P9A1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_at_all"/>
                <RadioButton
                    android:id="@+id/P9A2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a_little_bit"/>
                <RadioButton
                    android:id="@+id/P9A3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/moderately"/>
                <RadioButton
                    android:id="@+id/P9A4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quite_a_bit"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/extremely"/>
            </RadioGroup>
            <Button
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/baby_blue"
                android:layout_gravity="center"
                android:text="@string/submit"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>