<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:padding="20dp"
    tools:context=".MentalHealthMythsStartingScreen">

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/mental_health_myths"
        android:textColor="@android:color/black"
        android:textSize="35sp"
        android:layout_marginBottom="20dp"/>

    <ImageView
        android:id="@+id/mentalhealthmyths"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/heading"
        android:layout_centerInParent="true"
        android:contentDescription="@string/mental_health_myths"
        app:srcCompat="@drawable/anxiety_panic" />

    <Button
        android:id="@+id/button_start_evaluation"
        android:layout_below="@+id/mentalhealthmyths"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/start_evaluation" />
    <Button
        android:id="@+id/button_back"
        android:layout_below="@+id/button_start_evaluation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/back"/>

</RelativeLayout>